@@ -1,28 +1,43 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST guacamole-auth-jdbc-0.9.7.tar.gz 2997194 SHA256 f112c0ab83e4253f3a914716c5a7e61c4d7dc64d724e7c11bb4b695f386474a5 SHA512 0bfa920fed4b5baabc6f5541d9a5badc0a88c51e95675f00889d9d6f7a2069b07f0bee4ed628b82a4c243dd0a8fb1646a5ba6f822ca5704b1f60b49f3a2fd698 WHIRLPOOL 013ad62f68050b8c431565fa375e6c3c50e2cd1b962b6409c3b79f8652f021f71139de6facf3cd4195b34067ad01fba33bc980bbe4d50d8cc3d7f984555396c9
 DIST guacamole-auth-ldap-0.8.0.tar.gz 382872 SHA256 745e7541ab5db9decb463a7358e17c13cab5843d8458e0bf04f5a8eda8f19064 SHA512 2e775de3757b0e161fd7c6ac19982763bbafec42fef3418cb469cf3cb6bf1783b01486fe28e5a250af7b67107a5c3c73e2ad2b10a4e49b3ca187e76e2b578776 WHIRLPOOL df9a926df2f2a095a816234b6499640149e81acb4b6610d94ff8588e28ae9eaace8c0ca1808d1522aa55531674c53cbc6b5f55f606d7af73918610c9eb095ecf
 DIST guacamole-auth-ldap-0.9.0.tar.gz 382885 SHA256 b9e0440202a4106b6fd0a8cdd9da7bfa476895ce8724edc7d75e80b89bca9780 SHA512 caf228029a4e69ac1ac1f252c761167c1676eadbb362877753710aa28d274f76ed8091102f5a142b871dc7a7e22f98d113c18fa06e46dfbf6ec57c3ea92b435b WHIRLPOOL 3f674c98c6c0bf068426f3c78947f1f09fecc19d55a341b58f9adde8920bc30722077feed7f293d082009991bc08ab8cbddba2569a65e05fcc39b8a91f5f875f
 DIST guacamole-auth-ldap-0.9.2.tar.gz 382892 SHA256 478b0f5a3f9df0de4614b0432707cad443ea9f65ad219cffe904c6a91177250c SHA512 7ff6ed8aeac872aebfe654992208342370f991eabd141ac102ea553cc94b8c69c382344b5c8419745bcdc8f83b77d9b72577c8ddef9e2d000549a5fb1ae70617 WHIRLPOOL 846a673f1d61294b201d95160e2979254537fe80ffbbdc00756ee6202dd9886807a9c1f4b8f60653c528776a5c852cc7382cd14dec624aa10934fbf04e4a4584
 DIST guacamole-auth-ldap-0.9.3.tar.gz 382919 SHA256 0502e3d4e8512fbdd12b144285badfe2cd0b02fa9b0072b0b9772076998c8156 SHA512 e3eebeafd841d304f4c2beb21c1d54327bf0af2201794685c008d1812f05e70c8389888eec1e417c7e08600ebaf6f7f7330cddcf5176c9a12c987ba516155ebe WHIRLPOOL c7d2869d4ede53478cf55be4825dfdae4f47a7c03113e79dbf17afd190c823279f9967c2fefd518de0858484151901e5c3d4592ef3ffcb241c50949d59643068
+DIST guacamole-auth-ldap-0.9.7.tar.gz 384154 SHA256 479307fc54c20f0e4c661e135c0ad7251b3601054adbccdab2b7638cfa9c40bd SHA512 e750a89059a247ac17c7d137f8b7e03f43673a82559b91a39d0d1e69c94bb8212f7a17c335ec69f3c7d892c8ad0aaa746f50dfd247202468fc6c880e9126f1d2 WHIRLPOOL bdce95eb5d8a07de539dd44e55b6b44b746d0d3b12c7caba3c205ae584bdc69a83e5d05b753a650367fb2e172bd42eea0e3a21d3ef61f9e2cb35b8a028ac203c
 DIST guacamole-auth-mysql-0.8.2.tar.gz 2101795 SHA256 26902d50237a5bcb65b5dc9e31e7c51d6318614b97200c58c030a655e57aed82 SHA512 9bc5e7a5750d52a3df288088fa331f9e442cea06abf704df3989e714daba03e20b07ff5c531b4966ccc2f50c49124b9b7819447330d3be9ac5cce79c368663c6 WHIRLPOOL bce4711ca03315feb770cd82f07b4370ea8ff74ca38a952827b36428150ee31c3e6deaf633fd7e256047ccf9e361e80b2d46248e5f2f6c3f896363b2e2badd13
 DIST guacamole-auth-mysql-0.9.0.tar.gz 2104231 SHA256 5419d62a8decae579b54773ed70c8f21b03c11a53c24de982e8f84a79d74423e SHA512 00cc09e75f8c977a2465759b97022007fe34ba9272f9b9004eec404419a68b8c0b301fc385b4f09af07bde82510a6f5b808585c78a61b26cabd98529a5b1c4fa WHIRLPOOL cacb8ee6387b43b0c4fd5c473680404828acc8cbdee219930043ef2f18857ca53b1502e8a650f0cbc6a4a2dfbb42d457991043a4823445e261eb2dc53aad9601
 DIST guacamole-auth-mysql-0.9.2.tar.gz 2104317 SHA256 74567dcb03f2b4bbe059a8270c568ccf54a0a0ed8491de4ed2c3500cde0eabc3 SHA512 4422358b1ced34ca468f130807da6f8d7c65f39a0c3e1c7eecf004803ca62ccccda07b5a7a2b72f4b4e8337ad60783e5514af6318c2cc38f37397ba14cd2f552 WHIRLPOOL cc9583781f53110fd53e4f5dd6e2fc24fdd8a1c160fc674db4694ca3517b20846f43e0bb1a172378982303d03e4be8b2cb3a9e0e5e7c52a4d0f708b4da3766f1
 DIST guacamole-auth-mysql-0.9.3.tar.gz 2104479 SHA256 1cd081758b81b7cc082c383c7c2804434cb90ce609f5d02ed5c48fdcd50d13e6 SHA512 b33e1228b261e3857c385260a15f7b3b6088bdcaf2785f837b9525c5469a7af6560610c8064614b438160d98e349487037d78c11737dbef6a83be6b41bd37e4c WHIRLPOOL 371617fecb15b193cb51a3f76896982365e7d1d4c394021eeaec5281f57ce885517240842ce30f9543b002db71907ae550173b8ba75f19c866f297c3c52985a5
+DIST guacamole-auth-noauth-0.9.7.tar.gz 5810 SHA256 0ff433a73dcbc014cc5c7269f408ef01d02ab0d743f4b45a868b0f98a38d61ba SHA512 1f5e6f0b9e035c75edc556ff47a73e8e6e047369306e00e1281a97ac4896c7563b41dfbd66c89926d972e01a5aee3fdd9c0214d91cb84a83f177a4e3df05d537 WHIRLPOOL 7b75d883f6785bee4470cc3dee70e964c36447c0d1434c785e23b2d5bed8b18b3488c04dc4f8ae04f5a12dd54ba88ac7035acea99cd89e855ff264b1c548a09f
 DIST guacamole-client-0.8.3.tar.gz 345097 SHA256 a2e3d96b9f83308caf35068d657882fff9c3977533bb3b125cda1971422112ce SHA512 395ffbb08b877e4af538b1d0859d8e28e3352f2fe41482e7790c9b3c7597f37882ca032d383c7994d5f2e193404c5c267cdf793d642fb551e04465edfe93d7f0 WHIRLPOOL 19a778b40b7220604a7c5ecd93fa8a7680b7efadf304ffb5b747dad52bbf6dffdeed5a16c26cdd3773b6a0a155b7ba23a76b3233bdd2d658c0dc71a4a86ada80
 DIST guacamole-client-0.9.0.tar.gz 314566 SHA256 2f98776e542fccdeb3a120ae266834e56935a30196d0c3088a8fa523a07f3594 SHA512 33dd583cde9188066f0254fe9a531886be79110ef9f0e62fc60771d2751a927f783eb484e5484760e4ed3bc2aaa1f2000f43f953b78122cbdc2b0f19d8141457 WHIRLPOOL 972ea5c2bfe7f7dc2b1cc42ca6bc49485c18e46b161180e6eddf828467dcce76cae58f89ca0a4e847ab33ebb0ee2ffa87b052c94a9707d8b1538cc3f1ac29c20
 DIST guacamole-client-0.9.2.tar.gz 386263 SHA256 c12f9b1b32621cc44d1e428d71eac5798f85f6b8df23edd3920907678205084c SHA512 e9e73b23b64883c64a1bd0908ecc9e685dc23308c3d44bd2c9c691e43fe383424bfc14816d0248b0f2a693da473a3a780a2d2469024aae53587b67f78d0b0af6 WHIRLPOOL 5a25e9942c9d9067bfad063833f89cc003ad8ba99c1ad1a2fd49d901f3c3616dac974f6abc67a4854129ea5160a7f7194a6b3e72e4741b0ff9a71025f57f229f
 DIST guacamole-client-0.9.3.tar.gz 396313 SHA256 e579ef8f5271c19955429b9d064fd58f7554031c078557c1d65e5d51f695d8d1 SHA512 4ec3ec74b1175ce6b3cde4b9669a3f54f21b45c489c592ea3cabd2af670bf0ec9449f8a368d416640ed7348e77c23ad05243b4fdff083a120f432053642f7727 WHIRLPOOL cb44f374acce366964554cd192440cd4eb71e6b5364bff31a853a7769becce34a608358c204702702220e602cf94732af59ab707b4fb38452cbc78fca541829f
+DIST guacamole-client-0.9.7.tar.gz 1580766 SHA256 905c32cb26844d7fca2a135cc6fcbc5017da7a71df5d4fed01786fe404ab9883 SHA512 eb9d9be14e9a55192c2e341fbd9b07d3cf1b3f4f06dbe97cdb5ca5d624362a895a6369100859716d9cf65562fa251424c9b3a36c2a7d4812bfb2814ab96dc5c3 WHIRLPOOL fbdade073fd2be4ea442d1b604f623a1e0046d744b86447e1eabc42643aae70eec62b596e2e014b294f14377c5823a42a498b75c06ded70346446b4ccc9c72b4
 EBUILD guacamole-0.8.3.ebuild 4989 SHA256 b8a4046aaf9370bd088fa646d0391f212cc99bf3262b7cc03588aa87bee96394 SHA512 c6d79b0fc3e7a8874715dc4c43501174b74c9ff18ca26c98b04af947cc43f460beb770e1574efad593ce5ee79e144ecef7f19121fa630489e09b4e7cce288706 WHIRLPOOL 4a8b2ab3e2ff4b435752e6331c44b070901db93a6bcb39c622ebcf61a162bccd2e9ca40ea7eb4d4cc5b8c793704422333ec4d739b1c1135d35b2c13022dadb1d
 EBUILD guacamole-0.9.0.ebuild 4987 SHA256 def40969081eb8bc533a961fd509f360c34f48dc7b68b929788917c83fa21931 SHA512 c314ae235dc3b533bcc49da47b3b7b34b73bd7cd6b4e351a8a4aa9309dbefdc441c00ac199047728e9e21f1092c88f44f43c09299335a5b0cfe02c5801d6413b WHIRLPOOL 4e7632e47895ae3508e7786edb6cd99ca066573f6fa823e80a02312d0c3b53e30df139c17845b18da7742fc66eabbbb1a8a8a6c8b125319bf2773e2b7ae86fcc
 EBUILD guacamole-0.9.2.ebuild 4982 SHA256 30794d0001e95f8ef35a4b1c9da228bb2e4ad1fbec1d0c49749880971c74e64e SHA512 60b39d2eaf0e730f5bc0ffb118b88bc702f93487cc8b98ee1c56e9dd1fa871b2a124ce79d18826bb017fe8e145810f107f8f8ccec7330c5483dd621847735411 WHIRLPOOL c400a4fdf9de0ad5ef34e4682468e82bf2f1bf451827a8b7797f1bd84896774dedd76aa884a7c377d74a27d2ea571c5c1a23baa2dad437d4084f3c583d0e9223
 EBUILD guacamole-0.9.3.ebuild 4982 SHA256 63e174074054f9934851995b81fde3fe63ab9cf07c04b52cf84b12acc28b0a1a SHA512 d62890076a9320ef903ab5e16ffd52723218d58ff486fc6b872c8c4f5cf75b7a4f7aebf1265e62f2920f002eca8d8f6d882c23bf4a45f27d3af10f6c3db93af2 WHIRLPOOL 2d1abb6d154cb9357607df0bcd332e84ba590e411827ed0f980f9b8a96ca6c2ec8b58f7ac91d57ce3c531852caeb6c5e3ee66c632ae90280b7c23023bd037bf8
-MISC ChangeLog 2052 SHA256 5087fd9a7420d55fc238536fefd4ab38f32cc82d220f9a1e6813152b437b7ff8 SHA512 7d8c2ccaad5a5058c9269645f66d1e1ef6443d0eb55d4121a3736b74809c1877d13f44421cdfaa9c36059031cd4f77a958249a4effaaa48aab25ac05d97fa657 WHIRLPOOL 8bc0bde8fcf19df3c64a21a973d4d02944375f7215500b6227ad5e5f9c43d97544ab4e0d9bc8c6ff37d1a9789087893ea27817a14a349e5cea02eff6fdf9ac9e
-MISC metadata.xml 641 SHA256 8da01a09b9826c5d47a704916466f320c7da31f5356db20874ebd7fc737bd51f SHA512 caef7a3e86f7e1cd1338e4abab0ee96c06690ab831f66260007a3ae732449fd4c87e98b97009b6a7f7be5f80746828b8bd0f49dde5c5a89717caedc6435b3773 WHIRLPOOL 45ddf48b13040a4f0fb36d7cd39fc030b0e087bb353b09d6d8c83ee8bb627cac82ee5d23181373675395394d8c4a3435855b4001d8a686557df701819a7f34bd
+EBUILD guacamole-0.9.7.ebuild 8047 SHA256 fcfd30a161bffbcd2238c8d13601bf6516db728eb39a095a115a892889088073 SHA512 6358c59dbe73856502535041234a26c7c805999e17735e8cd7427a562e2c8b5df7a56fd9381aac4cde7fc7091978e484fc0c46296d5b1bdeba0a17ba79506184 WHIRLPOOL 49774ebc70727a32104fa767b747c9373619e3781b2d534cd79c4cedf0da9097231719b51c39d7d59aef840c67bd044796cc3e26401b4112ef4363c04cc16c79
+MISC ChangeLog 2225 SHA256 fdb380880b18798a5ecfef1743912011a568c73dd2e04303ac464f23dc818f12 SHA512 b1f64a26a9ff45fb053f0a6c1867d596eb1b19ffbaee28e8f99bc943e3a6005f0ac014d6a5d36c5c3350393e3e6deeea53791ee3af429e999739fbd7955384ab WHIRLPOOL fa72c6c16bdffa1fc41dab20f8fd03e814b2ae623b2bd77953f2e13663bf7e326fdb786e7f5ab4014f0f27ce9913160ae84f429de53227d16197032cb3f7e20d
+MISC metadata.xml 761 SHA256 019391c0af11e5f1b983cca7de077ef397a464d75d014b885b76af014eb20e21 SHA512 e55ec1755e33e8604abe89a80144a5490fcb7a4033b61dd2788a2aad3b08c19fc1e2853494933c9a30c0a299d61a6493e59b53d339725d5ee8aff9ae3c822086 WHIRLPOOL 7b71ba2197c2e5aab4bee9bc5987299eecb2371c74a33904c6268cc695614bab44e971d710a18c8f5b691820a907e35c2bc47930455eade39423bbf74acbc978
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlRPxdMACgkQakKUmsHeVLK/IgCdHG/lq2dtwf9HJSgqe/mI2S/S
-8PAAn2dVW2KuMntRjJQCZXnMD4TKX+YL
-=rPPY
+iQIcBAEBCAAGBQJVe/d5AAoJEIug43o+kWudsgUP/jOXVE31bR9/KfLnrRKAuwgg
+M+gu2s2t/LznUuUWF3XfZjS1grSOaX3RGu1g7R3mWuayyyxehTe5EmXaseBkCztV
+BevIV3Y6AmmZbWXIrkLHRQiRZ3yldJ4251IT24XGZQ1Hqo2+uRoFns2kohGGpKUE
+p3tMIwCjtMV1Ns4KfDy3ssoTh6QnIdSz3kAKso0DPxz8bfJ1cq/C63qhvlqI0yYc
+zfo5IMtdqsKJNRBIktYum+MausFZk3/nF4cFvnUoP6Skn1HGkfpYLTuJ5KbkWxwi
+4G+V5OCACfdMo//1NdeJYHBjHoReVpbqCsH/sQ4NqUuIPcMiNJ9doSpuvedMu5LP
+RF4QP9O7oJPNM3lcsSTyRrVekmQyJ63BMLepcFqXDjueHEU8uC1oh0imTMuidSLv
+CiakuQkhsOGCKLahonK6yr8sZ2ipOw8rzFMG9b1rhn6y01LUurNilJvXN+8Ve3IO
+EYM2if4fc0HFoeo10yUA0umd7Je/M3Ze+seazYn31qaiq9oRNb4ZRiT7K6JCDJqN
+hKTUBYUu8YH2QSiPPpKI9poH3dv2XLDILCImUQSK50RJdeugWWLcpbim/oM3nI0M
++ZSloloJyhq8OYKzSNttFQRh77vBgXcm5Gg8D/ZQmEEJ1vMzu/XP1vmlqgAaaNUE
+SWcFKgKCovk1Shrvs1LI
+=qYFU
 -----END PGP SIGNATURE-----
